[tool.poetry]
name = "travel-data-dashboard"
version = "0.1.0"
description = ""
authors = ["Chenyu Zuo <chenyu.zuo@csfm.ethz.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
streamlit = "^1.31.0"
pyproj = "^3.6.1"
plotly = "^5.18.0"
streamlit-extras = "^0.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
